# fancy-table

./: Cargo.toml  LICENSE  README.md
examples/: classic.rs  minimal.rs  modern.rs  simple.rs
src/: charset.rs  fancy.rs  lib.rs  padstr.rs
