[package]
name = "fancy-table"
version = "0.3.1"
description = "Fancy tables with bells and whistles"
repository = "https://github.com/mbuczko/fancy-table"
readme = "README.md"
authors = ["Michał Buczko"]
keywords = ["ascii", "table", "cli"]
categories = ["command-line-interface", "gui"]
license = "MIT"
edition = "2021"

[dependencies]
